Added ui-core and utils libraries

--- a/nx.json
+++ b/nx.json
@@ -17,7 +17,13 @@
     "default": {
       "runner": "@nrwl/workspace/tasks-runners/default",
       "options": {
-        "cacheableOperations": ["build", "lint", "test", "e2e"]
+        "cacheableOperations": [
+          "build",
+          "lint",
+          "test",
+          "e2e",
+          "build-storybook"
+        ]
       }
     }
   },
@@ -37,6 +43,9 @@
         "babel": true
       },
       "component": {
+        "globalCss": true,
+        "pascalCaseDirectory": true,
+        "pascalCaseFiles": true,
         "style": "css"
       },
       "library": {
