--- a/package.json
+++ b/package.json
@@ -9,31 +9,47 @@
   },
   "private": true,
   "dependencies": {
+    "@hookform/resolvers": "^2.8.3",
     "core-js": "^3.6.5",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-hook-form": "^7.19.0",
+    "react-router-dom": "^6.0.1",
     "regenerator-runtime": "0.13.7",
-    "tslib": "^2.0.0"
+    "tslib": "^2.0.0",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
+    "@babel/core": "7.12.13",
+    "@babel/preset-typescript": "7.12.13",
     "@nrwl/cli": "13.1.3",
     "@nrwl/cypress": "13.1.3",
     "@nrwl/eslint-plugin-nx": "13.1.3",
     "@nrwl/jest": "13.1.3",
     "@nrwl/linter": "13.1.3",
     "@nrwl/react": "13.1.3",
+    "@nrwl/storybook": "^13.1.3",
     "@nrwl/tao": "13.1.3",
     "@nrwl/web": "13.1.3",
     "@nrwl/workspace": "13.1.3",
+    "@storybook/addon-essentials": "~6.3.0",
+    "@storybook/builder-webpack5": "~6.3.0",
+    "@storybook/manager-webpack5": "~6.3.0",
+    "@storybook/react": "~6.3.0",
+    "@svgr/webpack": "^5.4.0",
+    "@testing-library/jest-dom": "^5.15.0",
     "@testing-library/react": "12.1.2",
     "@testing-library/react-hooks": "7.0.2",
+    "@testing-library/user-event": "^13.5.0",
     "@types/jest": "27.0.2",
     "@types/node": "14.14.33",
     "@types/react": "17.0.30",
     "@types/react-dom": "17.0.9",
+    "@types/yup": "^0.29.13",
     "@typescript-eslint/eslint-plugin": "~4.33.0",
     "@typescript-eslint/parser": "~4.33.0",
     "babel-jest": "27.2.3",
+    "babel-loader": "8.1.0",
     "cypress": "^8.3.0",
     "eslint": "7.32.0",
     "eslint-config-prettier": "8.1.0",
@@ -45,6 +61,7 @@
     "jest": "27.2.3",
     "prettier": "^2.3.1",
     "ts-jest": "27.0.5",
-    "typescript": "~4.3.5"
+    "typescript": "~4.3.5",
+    "url-loader": "^3.0.0"
   }
 }
