--- a/package.json
+++ b/package.json
@@ -10,13 +10,19 @@
   "private": true,
   "dependencies": {
     "@hookform/resolvers": "^2.8.3",
+    "@http-utils/core": "^1.1.0",
+    "@react-force/number-utils": "^2.1.0",
+    "axios": "^0.24.0",
     "core-js": "^3.6.5",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-hook-form": "^7.19.0",
+    "react-icons": "^4.3.1",
+    "react-query": "^3.32.1",
     "react-router-dom": "^6.0.1",
     "regenerator-runtime": "0.13.7",
     "tslib": "^2.0.0",
+    "uuid": "^8.3.2",
     "yup": "^0.32.11"
   },
   "devDependencies": {
@@ -45,6 +51,7 @@
     "@types/node": "14.14.33",
     "@types/react": "17.0.30",
     "@types/react-dom": "17.0.9",
+    "@types/uuid": "^8.3.1",
     "@types/yup": "^0.29.13",
     "@typescript-eslint/eslint-plugin": "~4.33.0",
     "@typescript-eslint/parser": "~4.33.0",
@@ -59,9 +66,13 @@
     "eslint-plugin-react": "7.26.1",
     "eslint-plugin-react-hooks": "4.2.0",
     "jest": "27.2.3",
+    "msw": "^0.35.0",
     "prettier": "^2.3.1",
     "ts-jest": "27.0.5",
     "typescript": "~4.3.5",
     "url-loader": "^3.0.0"
+  },
+  "msw": {
+    "workerDirectory": "apps/react-test-shop/src"
   }
 }
